New reader footer with special info from publisher if available.
removing related versions sidebar widget if no publisher exists

handling specific version external link

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -226,6 +226,32 @@
 #main footer b
   font-size: 13px
 
+#main footer input[type="submit"],
+#main footer a.button
+  background:
+    position: right
+    size: 36px 36px
+    repeat: no-repeat, repeat
+    image: image-url('blue-arrow@2x.png'), -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#ededed))
+  margin: 5px 0 0 20px
+  display: block
+  padding: 0 40px 0 15px
+  height: 36px
+  line-height: 36px
+  border-radius: 6px
+  text-align: left
+  text-decoration: none
+  font-weight: bold
+  font-size: 15px
+  font-family: "helvetica neue", sans-serif
+  color: #404040
+  border: #c7c5c5 solid 1px
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset
+
+#main footer input[type="submit"]:active,
+#main footer a.button:active
+  box-shadow : 0 3px 3px rgba(0, 0, 0, 0.1) inset
+
 
 // `Main > Verses
 //----------------------------------------------------------------------------------------------------
