dependent footer display based on if blurb exists, vertically centered without tables

--- a/app/assets/stylesheets/_helper_classes.sass
+++ b/app/assets/stylesheets/_helper_classes.sass
@@ -1,6 +1,6 @@
 // Utility helper classes, to
 // be sprinkled in as needed.
-// 
+//
 // Mmm... sprinkles!
 
 // `Hide/Show
@@ -60,6 +60,15 @@
 
 .make_inline
   display: inline !important
+
+.as_table
+  display: table
+  width: 100%
+
+.as_table > .vcenter
+  display: table-cell
+  vertical-align: middle
+  width: auto
 
 // `Floats
 //----------------------------------------------------------------------------------------------------
