--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -228,11 +228,12 @@
 
 #main footer input[type="submit"],
 #main footer a.button
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#ededed))
   background:
+    image: image-url('blue-arrow@2x.png')
     position: right
     size: 36px 36px
-    repeat: no-repeat, repeat
-    image: image-url('blue-arrow@2x.png'), -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#ededed))
+    repeat: no-repeat
   margin: 5px 0 0 20px
   display: block
   padding: 0 40px 0 15px
@@ -247,11 +248,23 @@
   color: #404040
   border: #c7c5c5 solid 1px
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset
+  float: right
+  min-width: 170px
 
 #main footer input[type="submit"]:active,
 #main footer a.button:active
   box-shadow : 0 3px 3px rgba(0, 0, 0, 0.1) inset
 
+footer .publisher > .courtesy
+  font-size: 13px
+
+// blurb/copyright with no courtesty heading
+footer .publisher .blurb
+  color: $mute
+
+// blurb with a courtesy of heading override
+footer .publisher .courtesy + .blurb
+  font-weight: normal
 
 // `Main > Verses
 //----------------------------------------------------------------------------------------------------
