--- a/app/assets/stylesheets/_reader_text.scss
+++ b/app/assets/stylesheets/_reader_text.scss
@@ -406,10 +406,10 @@
   margin-bottom: 0;
 }
 
-/* Hide cross references in ESV and HCSB */
+// /* Hide cross references in ESV and HCSB */
 
-.vid59 .note.x,
-.vid72 .note.x {
-	display: none;
-}
+// .vid59 .note.x,
+// .vid72 .note.x {
+// 	display: none;
+// }
 
