--- a/app/assets/stylesheets/_helper_classes.sass
+++ b/app/assets/stylesheets/_helper_classes.sass
@@ -61,6 +61,9 @@
 .make_inline
   display: inline !important
 
+.make_inline_block
+  display: inline-block !important
+
 .as_table
   display: table
   width: 100%
@@ -69,6 +72,8 @@
   display: table-cell
   vertical-align: middle
   width: auto
+
+
 
 // `Floats
 //----------------------------------------------------------------------------------------------------
