fixed login stuff

--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -5,7 +5,7 @@
   %meta{name: 'Description', content: @site.description}
   %meta{name: "HandheldFriendly", content: "True"}
   %meta{name: "MobileOptimized", content: "320"}
-  %meta{name: "viewport", content: "width=device-width, target-densitydpi=160dpi, initial-scale=1.0"}
+  %meta{name: "viewport", content: "width=device-width, target-densitydpi=160, initial-scale=1.0"}
 
   = stylesheet_link_tag 'application'
   = stylesheet_link_tag 'wysiwyg/jquery.wysiwyg.css'
