graphs from new newrelic interface via heroku addon

--- a/app/assets/stylesheets/status.sass
+++ b/app/assets/stylesheets/status.sass
@@ -1,3 +1,10 @@
 section
   margin-bottom: 20px
-  
+  clear: both
+
+.content iframe
+  float: right
+  margin-right: 56px
+
+#container
+  padding-left: 0px
