--- a/app/assets/stylesheets/_vars.sass
+++ b/app/assets/stylesheets/_vars.sass
@@ -15,6 +15,7 @@ $red: #c90000
 $blue_light: lighten($blue, 15%)
 $blue_dark: darken($blue, 15%)
 $body_text: #444
+$label_text: #666
 $radius: 4px
 $mute: #888
 $reader_line_height: 2em
