--- a/app/views/references/_js.html.haml
+++ b/app/views/references/_js.html.haml
@@ -20,6 +20,7 @@
           size: "#{@size}",
           trans_notes: "#{@trans_notes}",
           cross_refs: "#{@cross_refs}",
+          show_highlights: "#{@show_highlights}",
           full_screen: "#{fullscreen}",
           parallel_mode: "#{parallel}"
         });
