add search as you type input for book chapter menu

--- a/app/cells/book_selector/display.html.haml
+++ b/app/cells/book_selector/display.html.haml
@@ -13,6 +13,10 @@
 #menu_book_chapter.dynamic_menu
   .spinner_wrapper{style: "display: none;"}
     #book_chapter_spinner.dynamic_menu_spinner
+  #search
+    %select.book
+    %select.chapter
+    %select.verse
   %span.menu_arrow
     &nbsp;
   #menu_book
