--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -117,6 +117,17 @@
     weight: normal
   line-height: 1
 
+#menu_book_chapter #search .book
+  width: 178px
+  margin-right: 20px
+  float: left
+
+#menu_book_chapter #search .chapter,
+#menu_book_chapter #search .verse
+  width: 50px
+  margin-right: 5px
+  float: left
+
 .dynamic_menu table
   border-collapse: separate
   cursor: default
