--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -117,16 +117,8 @@
     weight: normal
   line-height: 1
 
-#menu_book_chapter #search .book
-  width: 178px
-  margin-right: 20px
-  float: left
-
-#menu_book_chapter #search .chapter,
-#menu_book_chapter #search .verse
-  width: 50px
-  margin-right: 5px
-  float: left
+#menu_book_chapter #search input
+  width: 100%
 
 .dynamic_menu table
   border-collapse: separate
@@ -182,11 +174,14 @@
 // `Book & Chapter Menu
 //----------------------------------------------------------------------------------------------------
 
-#menu_book_chapter
+#menu_book_chapter #browse
+  @extend .clearfix
   background:
     image: image-url("menu_book_chapter.png")
     repeat: repeat-y
     position: center top
+  padding-top: 5px
+
 
 #menu_book_chapter ul,
 #menu_book_chapter ol
