--- a/app/cells/book_selector/display.html.haml
+++ b/app/cells/book_selector/display.html.haml
@@ -14,21 +14,20 @@
   .spinner_wrapper{style: "display: none;"}
     #book_chapter_spinner.dynamic_menu_spinner
   #search
-    %select.book
-    %select.chapter
-    %select.verse
-  %span.menu_arrow
-    &nbsp;
-  #menu_book
-    %header
-      =t("book")
-    .scroll
-      %ul
-        - @version.books.each do |book_usfm, book_info|
-          %li
-            %a{:href => '#', "data-book" => book_usfm.downcase}=  book_info.human
-  #menu_chapter
-    %header
-      =t("chapter")
-    .scroll
-      %ol#chapter_selector
+    %input{type: "text"}
+  #browse
+    %span.menu_arrow
+      &nbsp;
+    #menu_book
+      %header
+        =t("book")
+      .scroll
+        %ul
+          - @version.books.each do |book_usfm, book_info|
+            %li{"data-search" => book_info.search}
+              %a{:href => '#', "data-book" => book_usfm.downcase}=  book_info.human
+    #menu_chapter
+      %header
+        =t("chapter")
+      .scroll
+        %ol#chapter_selector
