--- a/app/cells/book_selector/display.html.haml
+++ b/app/cells/book_selector/display.html.haml
@@ -14,7 +14,7 @@
   .spinner_wrapper{style: "display: none;"}
     #book_chapter_spinner.dynamic_menu_spinner
   .search
-    %input{type: "text"}
+    %input{type: "text", placeholder: t('filter book')}
   .browse
     %span.menu_arrow
       &nbsp;
