--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -4,7 +4,7 @@
   .spinner_wrapper{style: "display: none;"}
     #version_spinner.dynamic_menu_spinner
   .search
-    %input{type: "text"}
+    %input{type: "text", placeholder: t('versions.filter')}
   .browse
     %span.menu_arrow
       &nbsp;
