--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -11,7 +11,7 @@
     .scroll
       %table
         - if @recent_versions.present?
-          %tr
+          %tr.cat
             %th{:colspan => '2'}= t('recent versions')
           = render partial: 'items', locals: {versions: @recent_versions}
         = render_cell :version_selector, :all_versions, version: @version, reference: @ref, is_alt: @is_alt, force_style: @force_style, link_params: @link_params, site: @site
