added ability to press enter to select first search match:

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -232,7 +232,8 @@
 
 .dynamic_menu tr:hover a,
 #menu_book li:hover,
-#menu_chapter li:hover
+#menu_chapter li:hover,
+.dynamic_menu .first-match
   background-color: $blue-dark
   +background-image(linear-gradient($blue_light, $blue_dark))
   text-shadow: rgba(#000, 0.5) 0 -1px 0
