simplified press image packages, new CNN article

--- a/app/views/pages/press.html.haml
+++ b/app/views/pages/press.html.haml
@@ -62,23 +62,8 @@
       %a{class: "action_button_blue", href: "http://web-assets.youversion.com.s3.amazonaws.com/press/Bible-App-Icons.zip"}= t('download')
       %h4= t('press page.images.icons')
     %li
-      %a{class: "action_button_blue", href: "http://web-assets.youversion.com.s3.amazonaws.com/press/YouVersion-images-iphone.zip"}= t('download')
-      %h4= t('press page.images.iphone')
-    %li
-      %a{class: "action_button_blue", href: "http://web-assets.youversion.com.s3.amazonaws.com/press/YouVersion-images-ipad.zip"}= t('download')
-      %h4= t('press page.images.ipad')
-    %li
-      %a{class: "action_button_blue", href: "http://web-assets.youversion.com.s3.amazonaws.com/press/YouVersion-images-android.zip"}= t('download')
-      %h4= t('press page.images.android')
-    %li
-      %a{class: "action_button_blue", href: "http://web-assets.youversion.com.s3.amazonaws.com/press/YouVersion-images-blackberry.zip"}= t('download')
-      %h4= t('press page.images.blackberry')
-    %li
-      %a{class: "action_button_blue", href: "http://web-assets.youversion.com.s3.amazonaws.com/press/YouVersion-images-windowsphone7.zip"}= t('download')
-      %h4= t('press page.images.win phone 7')
-    %li
-      %a{class: "action_button_blue", href: "http://web-assets.youversion.com.s3.amazonaws.com/press/YouVersion-images-windows8.zip"}= t('download')
-      %h4= t('press page.images.windows 8')
+      %a{class: "action_button_blue", href: "http://web-static-assets.s3.amazonaws.com/press/YouVersion-Device-Images.zip"}= t('download')
+      %h4= t('press page.images.devices')
     %li
       %a{class: "action_button_blue", href: "http://web-assets.youversion.com.s3.amazonaws.com/press/YouVersion-images-lifestyle.zip"}= t('download')
       %h4= t('press page.images.lifestyle')
@@ -86,6 +71,10 @@
   %hr
   %h2= t('press page.links title')
   %ul.press_resources
+    %li
+      %a{class: "action_button_blue", href: "http://religion.blogs.cnn.com/2012/09/28/need-a-bit-of-bible-theres-an-app-for-that/"}= t('visit link')
+      %h4 CNN
+      %p Need a bit of Bible? There’s an app for that
     %li
       %a{class: "action_button_blue", href: "http://techcrunch.com/2012/05/10/bible-youversion-lifechurch/"}= t('visit link')
       %h4 TechCrunch
@@ -122,10 +111,6 @@
       %a{class: "action_button_blue", href: "http://techcrunch.com/2010/12/25/happy-birthday-it-turns-out-jesus-is-still-bigger-than-angry-birds-tctv/"}= t('visit link')
       %h4 TechCrunch
       %p Happy Birthday: Jesus Is almost Bigger than Angry Birds
-    %li
-      %a{class: "action_button_blue", href: "http://religion.blogs.cnn.com/2010/11/19/bible-app-hits-10-million-downloads/"}= t('visit link')
-      %h4 CNN
-      %p Bible App Hits 10 Million Downloads
     %li
       %a{class: "action_button_blue", href: "http://www.nytimes.com/external/venturebeat/2010/11/16/16venturebeat-god-comes-to-the-smartphone-bible-app-youver-96442.html?ref=technology"}= t('visit link')
       %h4 New York Times
