--- a/app/views/references/_js.html.haml
+++ b/app/views/references/_js.html.haml
@@ -20,9 +20,9 @@
           size: "#{@size}",
           trans_notes: "#{@trans_notes}",
           cross_refs: "#{@cross_refs}",
-          show_highlights: "#{@show_highlights}",
-          full_screen: "#{fullscreen}",
-          parallel_mode: "#{parallel}"
+          show_highlights: #{@show_highlights},
+          full_screen: #{fullscreen},
+          parallel_mode: #{parallel}
         });
         reader.init();
 
