--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -1,11 +1,6 @@
 // `Main
 //----------------------------------------------------------------------------------------------------
 
-.outer_container
-  position: absolute
-  opacity: 0
-  display: none
-
 #main
   float: left
   margin: 0 0 10px
@@ -326,11 +321,16 @@ article[data-setting-cross-refs="true"] .note.x > .label
   margin-right: 4px
   margin-left: 2px
 
+.outer_container
+  position: absolute
+  opacity: 0
+  display: none
+
 .inner_container
   left: 0
   display: block
   position: relative
-  max-width: 120px
+  max-width: 200px
 
 .note > .outer_container > .inner_container >.body
   +round
@@ -341,6 +341,7 @@ article[data-setting-cross-refs="true"] .note.x > .label
     family: $body_font
     size: 10px
     weight: bold
+  text-indent: 0px
   line-height: 1.3
   margin:
     top: 4px
