footnotes UX to flip vertically if they span off the bottom of the reader, and handle very very long notes reaching past bottom and top if flipped.

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -330,7 +330,8 @@ article[data-setting-cross-refs="true"] .note.x > .label
   left: 0
   display: block
   position: relative
-  max-width: 200px
+  // half the width of the reader
+  max-width: 229px
 
 .note > .outer_container > .inner_container >.body
   +round
