added footnote extra paragraph styling

--- a/app/assets/stylesheets/_reader_text.scss
+++ b/app/assets/stylesheets/_reader_text.scss
@@ -290,6 +290,13 @@
   text-indent: 2em;
 }
 
+//Footnote additional paragraph
+.fp {
+  margin-top: 1em;
+  display: inline-block;
+  text-indent: 1em;
+}
+
 .b {
   height: 1em;
 }
