tell robots not to index invalid ref page

--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -17,6 +17,9 @@
   /[if IE 7]
     = stylesheet_link_tag "ie7"
 
+- if content_for? :additional_meta
+  = yield :additional_meta
+
 - if content_for? :stylesheets
   = yield :stylesheets
 
