Make 'li_active' style work in IE 7 and 8
Fixes #254 for selected chapter (in book_chapter_menu)

--- a/app/assets/stylesheets/_ie7_and_ie8.sass
+++ b/app/assets/stylesheets/_ie7_and_ie8.sass
@@ -43,3 +43,7 @@
 
 #modal_overlay
   background: image-url("modal_overlay_ie7_ie8.png")
+
+#menu_chapter .li_active a
+  background: 
+    color: #333
