--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -340,7 +340,7 @@ article[data-setting-cross-refs="true"] .note.x > .label
   border: 1px solid #ccc
   font:
     family: $body_font
-    size: 10px
+    size: inherit
   text-indent: 0px
   line-height: 1.3
   margin:
