Add margin-top to headers that follow poetry.
Example where I saw this:
http://api.dev.youversion.com/bible/37/mat.2.ceb
(http://cl.ly/image/3N1w1H1x1X3o)

--- a/app/assets/stylesheets/_reader_text.scss
+++ b/app/assets/stylesheets/_reader_text.scss
@@ -36,10 +36,19 @@
 .p + .q1,
 .p + .li,
 .p + .li1,
-.li + li2,
+.li + .li2,
 .li1 + .li2,
 .li2 + .li,
 .li2 + .li1,
+.li + .s,
+.li1 + .s,
+.li2 + .s,
+.li + .s1,
+.li1 + .s1,
+.li2 + .s1,
+.li + .s2,
+.li1 + .s2,
+.li2 + .s2,
 .m + .s,
 .m + .s1,
 .m + .s2,
