Added some font fall backs if the web fonts don't work

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -69,7 +69,7 @@ p
     padding-left: 20px
 
     h1
-      font: 50px 'RobotoLight'
+      font: 50px 'RobotoLight', Arial, sans-serif
       letter-spacing: -0.05em
       width: 545px
     p
@@ -167,7 +167,7 @@ p
   overflow: hidden
 
   h1
-    font: 39px 'RobotoLight'
+    font: 39px 'RobotoLight', Arial, sans-serif
     letter-spacing: -0.05em
     color: #666
     margin-bottom: 30px
@@ -248,7 +248,7 @@ p
       border: none
       margin-top: -8px
     p:first-child
-      font: 50px 'BebasNeueRegular'
+      font: 50px 'BebasNeueRegular', Arial, sans-serif
       letter-spacing: -.03em
       margin-top: -10px
 
@@ -268,7 +268,7 @@ p
   h2
     margin-bottom: 10px
     padding-left: 65px
-    font: 50px 'RobotoLight'
+    font: 50px 'RobotoLight', Arial, sans-serif
     letter-spacing: -.05em
     background: image-url("Bible-app-icon-english-50x50.png") no-repeat 0 52%
 
